// Vitest Snapshot v1

exports[`snapshots > Readner Checked components 1`] = `
<label
  class="_checkbox_qo6px_1"
  for="checkbox-id1"
>
  <input
    checked=""
    class="_checkbox__input_qo6px_10"
    id="checkbox-id1"
    type="checkbox"
    value="1"
  />
  <span
    class="_checkbox__box_qo6px_19 "
    style="background-color: red; border-color: red;"
  >
    <span
      class="_checkbox__check_qo6px_29"
    />
  </span>
  <span
    class="_checkbox__label_qo6px_40 _checkbox__label--checked_qo6px_47"
  >
    Checkbox label
  </span>
</label>
`;

exports[`snapshots > Readner Default components 1`] = `
<label
  class="_checkbox_qo6px_1"
  for="checkbox-id1"
>
  <input
    class="_checkbox__input_qo6px_10"
    id="checkbox-id1"
    type="checkbox"
    value="1"
  />
  <span
    class="_checkbox__box_qo6px_19 "
  >
    <span
      class="_checkbox__check_qo6px_29"
    />
  </span>
  <span
    class="_checkbox__label_qo6px_40 "
  >
    Checkbox label
  </span>
</label>
`;
